<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">COMPANYNAME</string>
    <string name="action_settings">Settings</string>
    <string name="image_app_logo">Our Apps Logo</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="account_registration">ACCOUNT REGISTRATION</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="image_search_icon">Search Icon</string>

    <string-array name="security_questions">
        <item>Question 1</item>
        <item>Question 2</item>
        <item>Question 3</item>
        <item>Question 4</item>
        <item>Question 5</item>
    </string-array>
    <string-array name="card_types">
        <item>Card 1</item>
        <item>Card 2</item>
        <item>Card 3</item>
        <item>Card 4</item>
        <item>Card 5</item>
    </string-array>

    <string name="title_activity_user_information">REGISTRATION</string>
    <string name="title_activity_payment_information">PAYMENT INFORMATION</string>
    <string name="title_activity_start_search">SEARCH</string>

</resources>